--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: setup go
-        uses: actions/setup-go@v4
-      - run: gofmt -d .
+      - uses: actions/setup-go@v4
+      - uses: golangci/golangci-lint-action@v3
+        with:
+          version: v1.54
