--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -9,6 +9,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
-      - uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.54
+          cache: false
+      - name: golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
