--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -15,4 +15,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: latest
-        run: golangci-lint run ./...
+      - run: golangci-lint run ./...
