--- a/.github/workflows/formatter.yaml
+++ b/.github/workflows/formatter.yaml
@@ -9,10 +9,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-go@v4
-        with:
-          cache: false
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v3
-        with:
-          version: latest
-      - run: golangci-lint run ./...
+      - name: check gofmt
+        run: |
+          gofmt_result=$(gofmt -l .)
+          if [ -n "$gofmt_result" ]; then
+            gofmt -d
+            exit 1
+          fi
